Simplified (and sped up) constructor calls.